exports[`Link should render its children 1`] = `
<Text
  onPress={[Function foo]}
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "color": "#f77040",
          "fontSize": 14
        },
        undefined
      ]
    ]
  }>
  <Text>
    Woop, hoop, poop.
  </Text>
</Text>
`;

exports[`Link should support style overriding 1`] = `
<Text
  onPress={[Function foo]}
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "color": "#f77040",
          "fontSize": 14
        },
        Object {
          "fontSize": 23
        }
      ]
    ]
  } />
`;
